--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^7.2.2",
     "react-render-html": "^0.6.0",
     "react-scripts": "4.0.1",
+    "recompose": "^0.30.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "web-vitals": "^0.2.4"
