--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "recompose": "^0.30.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
