--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chai": "^4.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-json-view": "^1.19.1",
     "react-redux": "^7.2.2",
     "react-render-html": "^0.6.0",
     "react-scripts": "4.0.1",
