--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-tab-content-view",
   "description": "React component to display Javascript and JSON objects in title-content format",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "main": "lib/index.js",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
@@ -38,7 +38,8 @@
     "lint": "./node_modules/.bin/eslint src",
     "lint-fixup": "./node_modules/.bin/eslint src --ext .js,.jsx --fix",
     "posttest": "npm run lint",
-    "prepublishOnly": "npm test && npm run build"
+    "prepublishOnly": "npm test && npm run build",
+    "release": "release-it"
   },
   "eslintConfig": {
     "extends": [
@@ -74,6 +75,7 @@
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.0",
     "file-loader": "^6.2.0",
+    "release-it": "^14.2.2",
     "rimraf": "^3.0.2",
     "svg-react-loader": "^0.4.6",
     "webpack-cli": "^4.3.1"
