--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-tab-content-view",
   "description": "React component to display Javascript and JSON objects in title-content format",
   "version": "0.1.4",
-  "main": "lib/index.js",
+  "main": "dist/index.js",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
@@ -11,7 +11,6 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "chai": "^4.2.0",
-    "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-json-view": "^1.19.1",
     "react-redux": "^7.2.2",
@@ -26,10 +25,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "npm run clean && npm run build:commonjs && npm run build:umd && npm run build:umd:min",
-    "build:commonjs": "babel src --out-dir lib",
-    "build:umd": "cross-env FILE_NAME=reactTabContentView webpack",
-    "build:umd:min": "cross-env NODE_ENV=production npm run build:umd",
+    "build:prod": "npm run clean && npm run build:commonjs && npm run build:umd:prod",
+    "build:dev": "npm run clean && npm run build:commonjs && npm run build:umd:dev",
+    "build:commonjs": "babel src --out-dir dist",
+    "build:umd:dev": "cross-env webpack --config webpack.config-dev.js",
+    "build:umd:prod": "cross-env webpack --config webpack.config.js",
+    "build:svg": "svgr -d src/images/ src/assets/",
     "clean": "rimraf lib dist",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -47,18 +48,6 @@
       "react-app/jest"
     ]
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
@@ -69,22 +58,22 @@
     "@storybook/node-logger": "^6.1.9",
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.9",
+    "@svgr/cli": "^5.5.0",
     "@svgr/webpack": "^5.5.0",
     "babel-eslint": "^10.1.0",
     "cross-env": "^7.0.3",
+    "css-loader": "^5.0.1",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.0",
     "file-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^1.3.3",
+    "react": "^17.0.1",
     "release-it": "^14.2.2",
     "rimraf": "^3.0.2",
+    "style-loader": "^2.0.0",
     "svg-react-loader": "^0.4.6",
+    "url-loader": "^4.1.1",
     "webpack-cli": "^4.3.1"
-  },
-  "files": [
-    "dist/index.js"
-  ],
-  "directories": {
-    "example": "examples"
   },
   "repository": {
     "type": "git",
@@ -94,6 +83,7 @@
     "react",
     "tabs"
   ],
+  "homepage": "https://github.com/tech-troupe/react-tab-content-view",
   "author": "Eswar",
   "license": "MIT",
   "bugs": {
