--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "lint": "./node_modules/.bin/eslint src",
     "lint-fixup": "./node_modules/.bin/eslint src --ext .js,.jsx --fix",
     "posttest": "npm run lint",
-    "prepublishOnly": "npm test && npm run build",
+    "prepublishOnly": "npm test && npm run build:prod",
     "release": "release-it"
   },
   "eslintConfig": {
