fixed build script to publish package (#30)
* improved refresh message when all tabs are closed

* Automated deploy of storybook upon PR merge

* fixed typo in the all tabs closed message

* fixed yml to deploy to main branch during stories auto build & deploy

* removed unused import to test storybook automation

* Deploying to master from  @ 57cfa85a61ae0776446695a6c568f79e10f44950 🚀

* badges hardcoded and no content view

* lazy loading test case 1

* lazy loading and formatting

* advanced feature lazy loading - error

* store error

* missed merge conflicts resolved

* more merge conflicts resolved

* Bugfix for lasyloading feature

* spinner loading feature with lazy loading

- state updation with titleLoading and contentLoading
- middleware callbackaction and cllabackreducer removed since integrated with userAction and userReducer
- advStory uses promises to emulate async behaviour

* 2 seperate story test cases for long(5s) and minimal(10ms) delays

* 'Russian' repetion in story removed

* removed unused lines

* publishing 0.1.1 version of react-tab-content-view

* basic story file changes for passing display component

* Added lazy loading and support for external display component

* Committing LoadingSpinner missed file

* updated package version

* added support to pass external attributes and modified stories

* added linter, fixed linter errors, configured webpack & babel

* fixed storybook rendering issue

* fixed sidebar menu ordering in storybook

* removing generated files in lib folder from git commit

* added yml for Travis CI

* cleaned up webpack config file

* added new line in travis yml

* Added badges to README

* Update README.md

* 0.2.0

* fixed package version to 0.1.3

* committing modules in lib folder

* created dev & prod webpack bundles

* removed private server in npm registry

* fixed build script

* bumped package version to 0.1.5

Co-authored-

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-tab-content-view",
   "description": "React component to display Javascript and JSON objects in title-content format",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "main": "dist/index.js",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
@@ -39,7 +39,7 @@
     "lint": "./node_modules/.bin/eslint src",
     "lint-fixup": "./node_modules/.bin/eslint src --ext .js,.jsx --fix",
     "posttest": "npm run lint",
-    "prepublishOnly": "npm test && npm run build",
+    "prepublishOnly": "npm test && npm run build:prod",
     "release": "release-it"
   },
   "eslintConfig": {
